ci-cd-platform-deployment/kubernetes-gke/sample_project/myapp-template.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: myapp
  name: myapp-${INSTANCE_NAME}
  labels:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/instance: ${INSTANCE_NAME}
spec:
  selector:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/instance: ${INSTANCE_NAME}
  ports:
    - protocol: TCP
      name: http
      port: 80
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: myapp
  name: myapp-${INSTANCE_NAME}
  labels:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/instance: ${INSTANCE_NAME}
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: myapp
      app.kubernetes.io/instance: ${INSTANCE_NAME}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myapp
        app.kubernetes.io/instance: ${INSTANCE_NAME}
    spec:
      containers:
        - name: myapp
          image: ${GCP_REGISTRY}/myapp:${VERSION}
          ports:
            - name: http
              containerPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: myapp
  name: myapp-${INSTANCE_NAME}
  labels:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/instance: ${INSTANCE_NAME}
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`${INSTANCE_NAME}.myapp.[DOMAIN]`)
      kind: Rule
      services:
        - namespace: myapp
          name: myapp-${INSTANCE_NAME}
          port: 80
  tls:
    certResolver: letsencrypt
    domains:
      - main: "*.myapp.[DOMAIN]"
---
